frontend: align search input left and fix firefox issue

--- a/frontend/scss/main.scss
+++ b/frontend/scss/main.scss
@@ -69,10 +69,9 @@ div #command-select {
   input {
     @extend .toolbar-widget;
     @extend .toolbar-text;
-    padding-left: 0.5em;
+    padding-left: 1em;
     height: 100%;
     width: 100%;
-    text-align: center;
   }
 
   div {
@@ -190,11 +189,10 @@ div #command-select {
 // Log view style.
 //----------------------------------------------------------------------------
 .scrollable {
-  height: calc(100% - 342px);
+  height: calc(100% - 42px);
   word-break: break-all;
   white-space: pre;
   overflow: auto;
-  padding-bottom: 300px; 
 }
 
 .log-view {
@@ -202,6 +200,7 @@ div #command-select {
   font-size: $tailon-logview-font-size;
   line-height: 1.3;
   padding-top: 2px;
+  padding-bottom: 300px;
   color: $tailon-logview-text-color;
   background-color: $tailon-logview-background-color;
 
